# observability

./: .babelrc  .editorconfig  .eslintrc.js  .gitignore  .i18nrc.json  .kibana-plugin-helpers.json  CODEOWNERS  CONTRIBUTING.md  DEVELOPER_GUIDE.md  MAINTAINERS.md  NOTICE  README.md  RELEASING.md  babel.config.js  build.gradle  cypress.json  explain.json  go.sum  gradlew.bat  kibana.json  opensearch-dashboards-plugin-helpers.dev.json  opensearch_dashboards.json  package-lock.json  package.json  settings.gradle  tsconfig.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  draft-release-notes-config.yml
build-tools/: opensearchplugin-coverage.gradle  pkgbuild.gradle
common/: index.ts  paths.ts
dashboards-notebooks/: NOTICE  README.md  cypress.json  opensearch_dashboards.json  package.json
dashboards-observability/: .babelrc  .editorconfig  .eslintrc.js  .gitignore  cypress.json  opensearch_dashboards.json  package-lock.json  package.json
docs/: Integration-API.md  Integration-fields-mapping.md  Integration-loading.md  README.md  (+8 more)
scripts/integrations-cli/: .gitignore  README.md  integ-cli  integrations-cli.py  pyproject.toml  requirements.txt  scripts.py  upload  upload.sh
scripts/integrations-cli/helpers/: __init__.py  constants.py  create.py  validate.py
scripts/integrations-cli/integrations_cli/: main.py
scripts/integrations-cli/integrations_cli/helpers/: __init__.py  catalog.py  constants.py  create.py  validate.py
scripts/integrations-cli/template-dashboards/: http.ndjson  logs.ndjson
scripts/integrations-cli/tests/: __init__.py  test_validate.py
(+2704 files in other folders)
