[tool.poetry]
name = "integrations-cli"
version = "0.1.0"
description = "CLI for managing OpenSearch Integrations"
authors = ["Simeon Widdis <sawiddis@amazon.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
returns = "^0.19.0"
termcolor = "^2.2.0"
jsonschema = "^4.17.3"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
